tests/evaluate/success/identifier.src
// This is to test identifier expresssions. This should evaluate to 10.
main() {
    identifier = 10;
    return $identifier;
}
