tests/evaluate/fail/wrongfunction.src
// This is to test that we cannot call functions that don't exist. This will not evaluate.
realfunction() {}

main() {
    wrongfunction();
}
